# agent-practice

./: .gitignore  README.md
a2ui/adk-next26/: pyproject.toml
a2ui/adk-next26/a2ui_agent/: a2ui_utils.py  agent.py  resources.py
adk/: requirements.in  requirements.txt
adk-evaluation/: custom_metrics.py  pyproject.toml  test_tool_call_by_deepeval.py
adk-evaluation/home_automation_agent/: agent.py
adk-evaluation/tests/: test_custom_metrics.py  test_home_automation_agent.py
adk-evaluation/tests/fixtures/args_any_support/: simple_test.test.json  test_config.json
adk-evaluation/tests/fixtures/home_automation_agent/: simple_test.test.json  test_config.json
adk/count_plugin/: agent.py  plugin.py
adk/refine-loop/: agent.py
adk/stop-loop/: agent.py
ag-ui/: main.py
ag-ui/my-copilot-app/: package-lock.json  package.json
ag-ui/my-copilot-app/app/: layout.tsx  page.tsx
ag-ui/my-copilot-app/app/api/copilotkit/: route.ts
agentengine/: commands.txt  manage_engine.py  pyproject.toml
agentengine/search_agent/: agent.py
agentengine/tests/integration/: test_search_agent.py
agentengine/tests/integration/fixtures/search_agent/test_should_use_search_tool/: latest_ai_news.test.json  test_config.json
anthropic/effective-agents/: orchestrator_workers_pattern.py
coding/yapc-macopy/: agent.py
packaging/adk_stop_loop_agent/: pyproject.toml  run_request.json
packaging/adk_stop_loop_agent/src/adk_stop_loop_agent/: agent.py
